Salesforce/force-app/main/default/objects/Form_Definition__mdt/Form_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Contains metadata for a single form for display in MyQBCC.</description>
    <label>Form Definition</label>
    <pluralLabel>Form Definitions</pluralLabel>
</CustomObject>