Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this form active?  All implementations should check for this value prior to allowing form access.</description>
    <inlineHelpText>Is this form active?  All implementations should check for this value prior to allowing form access.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>