Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>The category on myQBCC/Forms that it will be displayed in</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Annual Financial Reporting</fullName>
                <default>true</default>
                <label>Annual Financial Reporting</label>
            </value>
            <value>
                <fullName>Building And Construction Industry Payments Act 2004</fullName>
            </value>
            <value>
                <fullName>Building Industry Fairness (Security of Payment) Act 2017</fullName>
            </value>
            <value>
                <fullName>Complaint Forms</fullName>
            </value>
            <value>
                <fullName>Licence Application Forms</fullName>
            </value>
            <value>
                <fullName>Trust Account Forms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>