Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Version__c</fullName>
    <defaultValue>(1)</defaultValue>
    <description>The current allowed version of the form.  If a form data record&apos;s version does not match this value, that record will no longer be accessible to the customer.</description>
    <inlineHelpText>The current allowed version of the form.  If a form data record&apos;s version does not match this value, that record will no longer be accessible to the customer.</inlineHelpText>
    <label>Current Version</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>