Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description for display on the myQBCC Forms list page</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>