Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/Display_on_myQBCC_Forms_List__c.field-meta.xml
<CustomField>
    <fullName>Display_on_myQBCC_Forms_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will be displayed on the myQBCC Forms list page</inlineHelpText>
    <label>Display on myQBCC Forms List</label>
    <type>Checkbox</type>
</CustomField>