Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <inlineHelpText>The order of the category/form to display on myQBCC - Note form type records are merged with this and sorting within category is done in JS</inlineHelpText>
    <label>Display Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>