Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Date the form will no longer be visible on myQBCC or blank</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>