Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/Form_Title__c.field-meta.xml
<CustomField>
    <fullName>Form_Title__c</fullName>
    <description>The title of the form.  This is both used in server error messages and displayed as the title of the form.  The Form Framework &quot;label&quot; attribute will override this value if set.</description>
    <inlineHelpText>The title of the form.  This is both used in server error messages and displayed as the title of the form.  The Form Framework &quot;label&quot; attribute will override this value if set.</inlineHelpText>
    <label>Form Title</label>
    <length>125</length>
    <required>true</required>
    <type>Text</type>
</CustomField>