Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/Org_Wide_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Org_Wide_Email_Address__c</fullName>
    <defaultValue>&quot;service@qbcc.qld.gov.au&quot;</defaultValue>
    <inlineHelpText>The Org-Wide Email address to send emails as</inlineHelpText>
    <label>Org-Wide Email Address</label>
    <type>Email</type>
</CustomField>