Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/Relative_Url__c.field-meta.xml
<CustomField>
    <fullName>Relative_Url__c</fullName>
    <description>The relative URL of the page within the MyQBCC community.  For example, &quot;/my-form&quot;.</description>
    <inlineHelpText>The relative URL of the page within the MyQBCC community.  For example, &quot;/my-form&quot;.</inlineHelpText>
    <label>Relative URL</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>