Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/Requires_Login__c.field-meta.xml
<CustomField>
    <fullName>Requires_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The form requires users to be filled in</inlineHelpText>
    <label>Requires Login</label>
    <type>Checkbox</type>
</CustomField>