Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/Save_Email_Template_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Save_Email_Template_Developer_Name__c</fullName>
    <defaultValue>&quot;myQBCC_Form_Framework_Save_Notification&quot;</defaultValue>
    <description>The developer name of the email template to send after saving.  If no value is specified, the default &quot;myQBCC_Form_Framework_Save_Notification&quot; will be used.</description>
    <inlineHelpText>The developer name of the email template to send after saving.  If no value is specified, the default &quot;myQBCC_Form_Framework_Save_Notification&quot; will be used.</inlineHelpText>
    <label>Save Email Template Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>