Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>When should this form be displayed on the myQBCC Forms List from</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>