Salesforce/force-app/main/default/objects/Form_Definition__mdt/fields/Submit_Email_Template_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Submit_Email_Template_Developer_Name__c</fullName>
    <defaultValue>&quot;myQBCC_Form_Framework_Submit_Confirmation&quot;</defaultValue>
    <description>The developer name of the email template to send after submit. If no value is specified, the default &quot;myQBCC_Form_Framework_Submit_Confirmation&quot; will be used.</description>
    <inlineHelpText>The developer name of the email template to send after submit. If no value is specified, the default &quot;myQBCC_Form_Framework_Submit_Confirmation&quot; will be used.</inlineHelpText>
    <label>Submit Email Template Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>