Salesforce/force-app/main/default/objects/Form_Definition__mdt/validationRules/Category_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Required</fullName>
    <active>true</active>
    <errorConditionFormula>Display_on_myQBCC_Forms_List__c &amp;&amp; ISPICKVAL(Category__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Category__c</errorDisplayField>
    <errorMessage>Category is required to display on myQBCC Forms List page</errorMessage>
</ValidationRule>