Salesforce/force-app/main/default/objects/Form_Definition__mdt/validationRules/Current_Version_must_be_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_Version_must_be_greater_than_0</fullName>
    <active>true</active>
    <description>The Form Definition&apos;s Current Version must be an integer greater than zero.</description>
    <errorConditionFormula>Current_Version__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Current_Version__c</errorDisplayField>
    <errorMessage>The Form Definition&apos;s Current Version must be an integer greater than zero.</errorMessage>
</ValidationRule>