Salesforce/force-app/main/default/objects/Form_Definition__mdt/validationRules/Display_Order_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Display_Order_Required</fullName>
    <active>true</active>
    <errorConditionFormula>Display_on_myQBCC_Forms_List__c &amp;&amp; ISBLANK( Display_Order__c )</errorConditionFormula>
    <errorDisplayField>Display_Order__c</errorDisplayField>
    <errorMessage>Display Order is required to display on myQBCC Forms List page</errorMessage>
</ValidationRule>