Salesforce/force-app/main/default/objects/Form_Definition__mdt/validationRules/Start_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>Display_on_myQBCC_Forms_List__c &amp;&amp;  ISBLANK(Start_Date__c)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date is required to display on myQBCC Forms List page</errorMessage>
</ValidationRule>